--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tonic = "0.3.1"
 prost = "0.6.1"
 tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time"] }
 async-stream = "0.3.0"
+tracing = "0.1.19"
+tracing-subscriber = "0.2.11"
 
 [build-dependencies]
 tonic-build = "0.3.1"
