--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time"] }
 async-stream = "0.3.0"
 tracing = "0.1.19"
 tracing-subscriber = "0.2.11"
+redis = "0.17.0"
 
 [build-dependencies]
 tonic-build = "0.3.1"
