--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,7 @@ tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time"] }
 async-stream = "0.3.0"
 tracing = "0.1.19"
 tracing-subscriber = "0.2.11"
-redis = "0.17.0"
+redis = { version = "0.17.0", default-features = false, features = ["tokio-comp", "streams"] }
 
 [build-dependencies]
 proto = { path = "../proto" }
