--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ async-stream = "0.3.0"
 tracing = "0.1.19"
 tracing-subscriber = "0.2.11"
 redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "streams"] }
+xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
 
 [build-dependencies]
 proto = { path = "../proto" }
