--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,7 +12,7 @@ prost = "0.6.1"
 tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time", "rt-threaded"] }
 tracing = "0.1.19"
 tracing-subscriber = "0.2.11"
-redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "streams"] }
+redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "streams", "script"] }
 xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
 
 [build-dependencies]
