--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 [dependencies]
 tonic = "0.3.1"
 prost = "0.6.1"
-tokio = { version = "0.2.22", features = ["sync", "stream", "time"] }
 tracing = "0.1.19"
 serde = { version = "1.0.115", default-features = false, features = ["serde_derive"] }
 serde_json = "1.0.57"
+xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
 
 [dev-dependencies]
-tokio = { version = "0.2.22", features = ["macros"] }
+tokio = { version = "0.2.22", features = ["macros", "time"] }
 
 [build-dependencies]
 proto = { path = "../proto" }
