--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,7 @@ tracing-subscriber = "0.2.14"
 redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "streams", "script"] }
 xactor = { version = "0.7.8", default-features = false, features = ["runtime-tokio"] }
 rand = "0.7.3"
+validator = "0.11.0"
 utils = { path = "../utils" }
 
 [build-dependencies]
