--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
 edition = "2018"
 
 [dependencies]
+prost = "0.6.1"
+tonic = "0.3.1"
+
+[build-dependencies]
 tonic-build = "0.3.1"
