--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,6 +13,6 @@ xactor = { version = "0.7.7", default-features = false, features = ["runtime-tok
 proto = { path = "../proto", features = ["client"]}
 
 [dev-dependencies]
-tokio = { version = "0.2.22", features = ["macros", "time"] }
+tokio = { version = "0.2.22", features = ["macros", "time", "sync"] }
 tracing-subscriber = "0.2.14"
 tracing = "0.1.19"
