--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 
 [dependencies]
 tonic = "0.3.1"
-prost = "0.6.1"
 serde = { version = "1.0.115", default-features = false, features = ["serde_derive"] }
 serde_json = "1.0.57"
 xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
+futures-util = "0.3.8"
 proto = { path = "../proto", features = ["client"]}
 
 [dev-dependencies]
