--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -14,6 +14,7 @@ server = []
 prost = "0.6.1"
 tonic = "0.3.1"
 validator = "0.11.0"
+serde = { version = "1.0.115", default-features = false, features = ["serde_derive"] }
 
 [build-dependencies]
 tonic-build = "0.3.1"
