--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 sled = "0.34.6"
+uuid = { version = "0.8.2", features = ["v5"] }
 
 [dev-dependencies]
 tokio = { version = "0.2.24", features = ["rt-core", "macros", "time",] }
