--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,13 +6,14 @@ authors = ["Héctor S. <hecsalazarf@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-tonic = "0.3.1"
-prost = "0.6.1"
-tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time", "rt-threaded", "signal"] }
-tracing = "0.1.21"
-tracing-subscriber = "0.2.14"
-redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "script"] }
-xactor = { version = "0.7.8", default-features = false, features = ["runtime-tokio"] }
+tonic = "0.4.0"
+prost = "0.7.0"
+tokio = { version = "1.0.2", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
+tokio-stream = "0.1.2"
+tracing = "0.1.22"
+tracing-subscriber = "0.2.15"
+redis = { version = "0.19.0", default-features = false, features = ["tokio-comp", "script"] }
+xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
 rand = "0.7.3"
 validator = "0.11.0"
 clap = { version = "2.33.3", default-features = false }
