--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -12,7 +12,7 @@ server = []
 
 [dependencies]
 prost = "0.7.0"
-tonic = "0.4.0"
+tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost"] }
 validator = "0.12.0"
 serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
 
