--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,7 @@ authors = ["Héctor S. <hecsalazarf@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-tonic = "0.4.0"
-prost = "0.7.0"
+tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
 tokio = { version = "1.0.2", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
 tokio-stream = "0.1.2"
 tracing = "0.1.22"
