--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 uuid = { version = "0.8.2", features = ["v5"] }
 lmdb-rkv = "0.14.0"
+tokio = { version = "1.1.0", features = ["sync"] }
 
 [dev-dependencies]
-tokio = { version = "0.2.24", features = ["rt-core", "macros", "time",] }
 tempfile = "3.2.0"
