--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 uuid = { version = "0.8.2", features = ["v5"] }
 lmdb-rkv = "0.14.0"
 tokio = { version = "1.1.0", features = ["sync"] }
+serde = "1.0.123"
+bincode = "1.3.1"
 
 [dev-dependencies]
 tempfile = "3.2.0"
