--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 uuid = { version = "0.8.2", features = ["v5"] }
-lmdb-rkv = "0.14.0"
+lmdb-rkv = { git = "https://github.com/hecsalazarf/lmdb-rs" }
 tokio = { version = "1.1.1", features = ["sync"] }
 serde = "1.0.123"
 bincode = "1.3.1"
