--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2018"
 
 [dependencies]
 tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
-tokio = { version = "1.0.2", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
+tokio = { version = "1.1.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
 tokio-stream = "0.1.2"
 tracing = "0.1.22"
 tracing-subscriber = "0.2.15"
 redis = { version = "0.19.0", default-features = false, features = ["tokio-comp", "script"] }
 xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
 rand = "0.8.2"
+uuid = { version = "0.8.2", features = ["v4"] }
 clap = { version = "2.33.3", default-features = false }
-utils = { path = "../utils" }
 proto = { path = "../proto", features = ["server"] }
+embed = { path = "../embed" }
