--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
 tokio = { version = "1.1.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
-tokio-stream = "0.1.2"
+futures-util = "0.3.12"
 tracing = "0.1.22"
 tracing-subscriber = "0.2.15"
 redis = { version = "0.19.0", default-features = false, features = ["tokio-comp", "script"] }
