--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2018"
 # Client generated service
 client = []
 # Server generated service
-server = []
+server = ["async-raft"]
 
 [dependencies]
 prost = "0.7.0"
 tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost"] }
 validator = "0.12.0"
 serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
+async-raft = { version = "0.6.0", optional = true }
 
 [build-dependencies]
 tonic-build = "0.4.0"
