--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,6 @@ clap = { version = "2.33.3", default-features = false }
 anyhow = "1.0.38"
 proto = { path = "../proto", features = ["server"] }
 embed = { path = "../embed" }
+
+[dev-dependencies]
+tempfile = "3.2.0"
