--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "proto"
+name = "common"
 version = "0.2.0"
 authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
 edition = "2018"
