--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,7 +16,7 @@ rand = "0.8.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 clap = { version = "2.33.3", default-features = false }
 anyhow = "1.0.38"
-proto = { path = "../proto", features = ["server"] }
+common = { path = "../common", features = ["server"] }
 embed = { path = "../embed" }
 
 [dev-dependencies]
