--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,9 +10,12 @@ serde = { version = "1.0.122", default-features = false, features = ["serde_deri
 serde_json = "1.0.61"
 xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
 futures-util = "0.3.12"
-common = { path = "../common", features = ["client"]}
+common = { path = "../common" }
 
 [dev-dependencies]
 tokio = { version = "1.0.2", features = ["macros", "time", "sync"] }
 tracing-subscriber = "0.2.15"
 tracing = "0.1.22"
+
+[build-dependencies]
+build = { path = "../build" }
