--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,19 +4,12 @@ version = "0.2.0"
 authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
 edition = "2018"
 
-[features]
-# Client generated service
-client = []
-# Server generated service
-server = ["async-raft"]
-
 [dependencies]
 prost = "0.7.0"
 tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost", "transport"] }
 validator = "0.12.0"
 serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
-async-raft = { version = "0.6.0", optional = true }
 uuid = { version = "0.8.2", features = ["v4"] }
 
 [build-dependencies]
-tonic-build = "0.4.0"
+build = { path = "../build/" }
