--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,8 +17,13 @@ uuid = { version = "0.8.2", features = ["v4"] }
 clap = { version = "2.33.3", default-features = false }
 anyhow = "1.0.38"
 serde = { version = "1.0.123", default-features = false, features = ["serde_derive"] }
-common = { path = "../common", features = ["server"] }
+prost = "0.7.0"
+async-raft = "0.6.0"
+common = { path = "../common" }
 embed = { path = "../embed" }
 
 [dev-dependencies]
 tempfile = "3.2.0"
+
+[build-dependencies]
+build = { path = "../build" }
