--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
+tonic = { version = "0.4.0", default-features = false, features = ["transport", "prost", "codegen"] }
 serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
 serde_json = "1.0.61"
 xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
