--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 prost = "0.7.0"
-tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost", "transport"] }
+tonic = { version = "0.4.0", default-features = false }
 validator = "0.12.0"
 serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
 uuid = { version = "0.8.2", features = ["v4"] }
