--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Héctor S. <hecsalazarf@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
+tonic = { version = "0.4.0", default-features = false, features = ["transport", "prost", "codegen"] }
 tokio = { version = "1.1.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
 futures-util = "0.3.12"
 tracing = "0.1.22"
