--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -14,4 +14,4 @@ bincode = "1.3.1"
 
 [dev-dependencies]
 tempfile = "3.2.0"
-tokio = { version = "1.1.1", features = ["rt", "macros"] }
+tokio = { version = "1.1.1", features = ["rt", "macros", "time"] }
